generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

enum Role {
  ADMIN
  WRITER
  READER
}

model User {
  id        String   @id @default(uuid())
  firstName String
  lastName  String
  email     String   @unique
  password  String
  role      Role

  recipes   Recipe[]
  likes     Like[]
  comments  Comment[]
}

enum Difficulty {
  EASY
  MEDIUM
  HARD
}

enum RecipeType {
  ENTREE
  MAIN
  DESSERT
}

model Recipe {
  id          Int     @id @default(autoincrement())
  title       String
  description String?
  prepTime    Int // in minutes
  cookTime    Int // in minutes
  difficulty  Difficulty
  type        RecipeType
  cuisine     String // e.g., "Vietnamese", "French"
  servings    Int
  
  authorId    String
  author      User    @relation(fields: [authorId], references: [id])

  particularities Particularity[]
  steps           Step[]
  ingredientSections IngredientSection[]
  nutritionalInfo NutritionalInfo?
  likes           Like[]
  comments        Comment[]
}

model IngredientSection {
  id       Int                @id @default(autoincrement())
  name     String
  recipeId Int
  recipe   Recipe             @relation(fields: [recipeId], references: [id], onDelete: Cascade)
  ingredients RecipeIngredient[]
}

model Particularity {
  id      Int      @id @default(autoincrement())
  name    String   @unique // e.g., "Vegan", "No Nuts"
  recipes Recipe[]
}

model Step {
  id          Int    @id @default(autoincrement())
  order       Int
  title       String
  description String
  mediaUrl    String?
  recipeId    Int
  recipe      Recipe @relation(fields: [recipeId], references: [id], onDelete: Cascade)
}

model Ingredient {
  id        Int                  @id @default(autoincrement())
  name      String               @unique
  fdcId     Int?                 @unique // FoodData Central ID (link to USDA)
  recipes   RecipeIngredient[]
  nutrition IngredientNutrition?
}

model IngredientNutrition {
  id            Int        @id @default(autoincrement())
  ingredientId  Int        @unique
  ingredient    Ingredient @relation(fields: [ingredientId], references: [id], onDelete: Cascade)

  // Per 100g values (USDA standard)
  servingSize   Float? // in grams

  // Macronutrients
  calories      Float? // kcal
  protein       Float? // g
  carbohydrates Float? // g
  fiber         Float? // g
  sugar         Float? // g

  // Fats (detailed breakdown)
  totalFat      Float? // g
  saturatedFat  Float? // g
  monounsatFat  Float? // g (monounsaturated)
  polyunsatFat  Float? // g (polyunsaturated)
  transFat      Float? // g
  cholesterol   Float? // mg

  // Minerals
  sodium        Float? // mg
  potassium     Float? // mg
  calcium       Float? // mg
  iron          Float? // mg
  magnesium     Float? // mg
  zinc          Float? // mg

  // Vitamins
  vitaminA      Float? // mcg (RAE)
  vitaminC      Float? // mg
  vitaminD      Float? // mcg
  vitaminE      Float? // mg
  vitaminK      Float? // mcg
  vitaminB6     Float? // mg
  vitaminB12    Float? // mcg
  folate        Float? // mcg

  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}

model PendingIngredientMatch {
  id          Int      @id @default(autoincrement())
  searchQuery String   // The original search term
  fdcId       Int      // USDA FoodData Central ID
  name        String   // Food name from USDA
  description String?  // Additional description from USDA
  dataType    String?  // e.g., "Foundation", "SR Legacy", "Branded"
  createdAt   DateTime @default(now())

  @@index([searchQuery])
}

model RecipeIngredient {
  sectionId    Int
  ingredientId Int
  quantity     String
  unit         String

  section    IngredientSection @relation(fields: [sectionId], references: [id], onDelete: Cascade)
  ingredient Ingredient        @relation(fields: [ingredientId], references: [id], onDelete: Cascade)

  @@id([sectionId, ingredientId])
}

model Like {
  userId   String
  recipeId Int
  user     User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  recipe   Recipe @relation(fields: [recipeId], references: [id], onDelete: Cascade)

  @@id([userId, recipeId])
}

model Comment {
  id        Int      @id @default(autoincrement())
  content   String
  createdAt DateTime @default(now())
  
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  recipeId  Int
  recipe    Recipe   @relation(fields: [recipeId], references: [id], onDelete: Cascade)
}

model NutritionalInfo {
  id            Int    @id @default(autoincrement())
  recipeId      Int    @unique
  recipe        Recipe @relation(fields: [recipeId], references: [id], onDelete: Cascade)

  // Per serving values
  servingSize   Float? // in grams

  // Macronutrients
  calories      Float? // kcal
  protein       Float? // g
  carbohydrates Float? // g
  fiber         Float? // g
  sugar         Float? // g

  // Fats (detailed breakdown)
  totalFat      Float? // g
  saturatedFat  Float? // g
  monounsatFat  Float? // g (monounsaturated)
  polyunsatFat  Float? // g (polyunsaturated)
  transFat      Float? // g
  cholesterol   Float? // mg

  // Minerals
  sodium        Float? // mg
  potassium     Float? // mg
  calcium       Float? // mg
  iron          Float? // mg
  magnesium     Float? // mg
  zinc          Float? // mg

  // Vitamins
  vitaminA      Float? // mcg (RAE)
  vitaminC      Float? // mg
  vitaminD      Float? // mcg
  vitaminE      Float? // mg
  vitaminK      Float? // mcg
  vitaminB6     Float? // mg
  vitaminB12    Float? // mcg
  folate        Float? // mcg

  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}
